jdk 1.4 compatibility fixes